fixing the spacing - qhwt-876

--- a/src/components/_global/css/body/component.scss
+++ b/src/components/_global/css/body/component.scss
@@ -432,7 +432,6 @@ form {
 
                     > ul:not([class]) {
                         > li {
-                            @include QLD-space(padding-left, 1unit);
                             list-style-type: none;
                             &::before {
                                 content: "";
@@ -483,7 +482,12 @@ form {
         }
     }
     
-    
+    ol:not([class]),
+    ul:not([class]) {
+        li {
+            @include QLD-space(line-height, 1.75unit);
+        }
+    }
     
     dl:not([class]) {
         > dd {
